src/objects/Miestnost__c.object
<CustomObject>
    <fields>
        <fullName>Byt__c</fullName>
        <label>Byt</label>
        <referenceTo>Byt__c</referenceTo>
        <relationshipLabel>Miestnosti</relationshipLabel>
        <relationshipName>Miestnosti</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NazovMiestnosti__c</fullName>
        <label>Názov Miestnosti</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Miestnosti</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oznacenie__c</fullName>
        <label>Označenie</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plocha__c</fullName>
        <label>Plocha</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Poznamka__c</fullName>
        <label>Poznámka</label>
        <type>TextArea</type>
    </fields>
    <label>Miestnosť</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Miestnosť ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Miestnosti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>